# metacoq

./: Makefile  configure.sh  coq-metacoq-etaexpand.opam
eta-expansion/: Makefile  Makefile.etaexpand  Makefile.etaexpand.conf  _CoqProject  _CoqProject.in  metacoq-config
eta-expansion/theories/: PCUICEtaExpansion.v  PCUICEtaExpansion_Defs.v  PCUICEtaExpansion_Examples.v  PCUICEtaExpansion_Facts.v
